[package]
name = "SampleWs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.48"
dashmap = "5.4.0"
futures = "0.3"
axum = { version = "0.6.12", features = ["ws", "headers"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
axum-sessions = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"